--- a/e-commerce/app/globals.css
+++ b/e-commerce/app/globals.css
@@ -72,3 +72,11 @@
         @apply bg-background text-foreground;
     }
 }
+
+@theme {
+    .shadow-3xl {
+        box-shadow:
+            0 10px 15px -3px rgba(0, 0, 0, 0.1),
+            0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    }
+}
