--- a/e-commerce/app/globals.css
+++ b/e-commerce/app/globals.css
@@ -18,7 +18,7 @@
         --popover-foreground: 222.2 84% 4.9%;
         --primary: 222.2 47.4% 11.2%;
         --primary-foreground: 210 40% 98%;
-        --secondary: 210 40% 96.1%;
+        --secondary: 215, 91%, 17%;
         --secondary-foreground: 222.2 47.4% 11.2%;
         --muted: 210 40% 96.1%;
         --muted-foreground: 215.4 16.3% 46.9%;
@@ -35,6 +35,7 @@
         --chart-4: 43 74% 66%;
         --chart-5: 27 87% 67%;
         --radius: 0.5rem;
+        --footer: 215, 91%, 17%;
     }
     .dark {
         --background: 222.2 84% 4.9%;
